--- a/appspec.yml
+++ b/appspec.yml
@@ -3,6 +3,7 @@ os: linux
 files:
   - source: /
     destination: /home/ec2-user/fd-worker
+file_exists_behavior: OVERWRITE
 permissions:
   - object: /home/ec2-user/fd-worker
     owner: ec2-user
