add dependencies installation script

--- a/appspec.yml
+++ b/appspec.yml
@@ -17,6 +17,8 @@ hooks:
   BeforeInstall :
     - location: scripts/download_artifacts.sh
       runas: ec2-user
+    - location: scripts/install-dependencies.sh
+      runas: ec2-user
   ApplicationStart:
     - location: scripts/start_app.sh
       runas: ec2-user
